@@ -54,7 +54,7 @@ union pthread_attr_t
   long int __align;
 };
 #ifndef __have_pthread_attr_t
-typedef union __pthread_attr pthread_attr_t;
+typedef union pthread_attr_t pthread_attr_t;
 # define __have_pthread_attr_t	1
 #endif
 
